--- a/blogpost.html
+++ b/blogpost.html
@@ -1,11 +1,18 @@
-
 <html>
-	<head>
-		<title>El titlo del post</title>
-		<link rel="stylesheet" href="css/estilos.css"/>
-	</head>
-	<body>
-		<h1>aqui vamos a hacer un blog post</h1>
-		<p> Y este es el parrafo de inicio </p>
-	</body>
+
+<head>
+	<title>El titlo del post</title>
+	<link rel="stylesheet" href="css/estilos.css" />
+</head>
+
+<body>
+	<div id="container">
+		<div id="post">
+			<h1>Este es el titulo interasante del post</h1>
+			<p> Y este es el parrafo del post que estamos colocando</p >
+		</div>
+	</div>
+
+</body>
+
 </html>
