--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,9 @@
 
 <body>
 	<div id="container">
+		<div id="cabecera">
+			Cabecera
+		</div>
 		<div id="post">
 			<h1>Este es el titulo interasante del post</h1>
 			<p> Y este es el parrafo del post que estamos colocando</p >
