--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,9 @@
 		<div id="post">
 			<h1>Este es el titulo interasante del post</h1>
 			<p> Y este es el parrafo del post que estamos colocando</p >
+			<p>
+				Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi quibusdam quis molestiae, dolorum laborum cum quae ullam quam praesentium iure! Consectetur neque dignissimos, ipsum reiciendis eligendi a impedit reprehenderit veniam.
+			</p>
 		</div>
 	</div>
 
