--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 	<div id="container">
 		<div id="cabecera">
 			HyperBlog
-			<span id="tagline">Tu blog de confianza</span>
+			<span id="tagline">Tu blog maestro</span>
 		</div>
 		<div id="post">
 			<h1>Este es el titulo interasante del post</h1>
@@ -17,6 +17,7 @@
 			<p>
 				Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi quibusdam quis molestiae, dolorum laborum cum quae ullam quam praesentium iure! Consectetur neque dignissimos, ipsum reiciendis eligendi a impedit reprehenderit veniam.
 			</p>
+			<p>Suscribete y dale like</p>
 		</div>
 	</div>
 
