--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
 <body>
 	<div id="container">
 		<div id="cabecera">
-			HyperBlog
+			HyperBlog Bienvenido
 			<span id="tagline">Mi blog de cabecera</span>
 		</div>
 		<div id="post">
