Color de fondo nuevo, logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
 <body>
 	<div id="container">
 		<div id="cabecera">
+			<img id="logo" src="img/logo.jpg">
 			HyperBlog Bienvenido a la version 2.0
 			<span id="tagline">Mi blog de cabecera</span>
 		</div>
