--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+	<meta charset="UTF-8">
 	<title>El titlo del post</title>
 	<link rel="stylesheet" href="css/estilos.css" />
 </head>
@@ -18,6 +19,9 @@
 				Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi quibusdam quis molestiae, dolorum laborum cum quae ullam quam praesentium iure! Consectetur neque dignissimos, ipsum reiciendis eligendi a impedit reprehenderit veniam.
 			</p>
 			<p>Suscribete y dale like</p>
+		</div>
+		<div id="footer">
+			Hecho con amor en platzi
 		</div>
 	</div>
 
