--- a/blogpost.html
+++ b/blogpost.html
@@ -24,7 +24,7 @@
 				sadfasfasfasfdasf
 				asdfasdfasdfasf
 				asdfasdfasdfasdfasdf. Cumque, eaque sapiente.
-				<p><<img src="https://i.imgur.com/r85i7jb.png" /></p>
+				<p><img src="https://i.imgur.com/r85i7jb.png" /></p>
 				Ducimus adipisci cum quos veniam laborum hic doloremque ea. Eveniet repudiandae pariatur, fugit atque quaerat dolorem velit voluptatibus ut veritatis cupiditate, architecto minima hic officiis officia, sunt quod similique ad?
 				Eum corporis at facere impedit, illo, est voluptas nesciunt mollitia non vel perferendis cumque sed natus tempore necessitatibus quo suscipit assumenda porro voluptate nihil, iste repellendus saepe? Consectetur, velit possimus.
 				Non consequuntur ducimus dolorum minima libero architecto eaque repellendus soluta ipsa quae voluptatem illo eius 
